--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
     "mongoose-sequence": "^5.3.1",
+    "cloudinary": "^1.32.0",
     "multer": "^1.4.3",
     "node-geocoder": "^3.27.0",
     "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
+    "dotenv": "^16.0.3",
     "path": "^0.12.7"
   }
 }
